
2015-04-11 Rolf Ade  <rolf@pointsman.de>

        Changed behavior wrt to result code of a called
        -xsltmessagecmd script. Up to now, the result code of that
        script evaluation was ignored. Now, any other return code of
        that script then TCL_OK terminates the xslt transformation and
        returns error. Purposeful termination may be signaled with
        return -code break, for which the error message will be empty.

2015-04-01 Rolf Ade  <rolf@pointsman.de>

        Added new expat parser cmd method currentmarkup. 

2015-03-26 Rolf Ade  <rolf@pointsman.de>

        Added option -indentAttrs to the domDoc/domNode method
        asXML. Thanks goes to evilotto.

2014-10-16 Rolf Ade  <rolf@pointsman.de>
	
        Added configure option --with-expat, to build and link against
        the system or a custom expat lib. Default is, to use the
        included sources.

2014-01-01 Rolf Ade  <rolf@pointsman.de>

        Rework so some basic internals, for (even) more efficiency of
        token mode.

2013-12-24 Rolf Ade  <rolf@pointsman.de>

        Improved handling of characters beyond BMP. 
        
2013-12-20 Rolf Ade  <rolf@pointsman.de>

        Added option -feedbackcmd to the dom parse method. This option
        allows to specify a script, which will be called as feedback
        command. For backward compatibility, if no -feedbackcmd is
        given, but there is a tcl proc named ::dom::domParseFeedback
        then this proc is used as -feedbackcmd. If there isn't such a
        proc and -feedbackAfter is used, it is an error to not also
        use -feedbackcmd. A return -code break from the -feedbackcmd
        causes the parser to almost immediatly abort parsing and let
        the [dom parse] call return the empty string (instead of a
        document) without raising error. 

        For expat parser objects: If a handler script returns -code
        return, then parsing is aborted, but no error is raised.
